--- a/s.qmd
+++ b/s.qmd
@@ -1,34 +1,51 @@
 ---
-
-title: "Old Faithful"
-
-format: html
-
-server: shiny
-
+title: "Old Faithful Eruptions"
+output: flexdashboard::flex_dashboard
+runtime: shiny
 ---
 
-```{r}
-
-sliderInput("bins", "Number of bins:",
-
-min = 1, max = 50, value = 30)
-
-plotOutput("distPlot")
-
+```{r global, include=FALSE}
+# load data in 'global' chunk so it can be shared
+# by all users of the dashboard
+library(datasets)
+library(shiny)
+data(faithful)
 ```
 
+Column {.sidebar}
+--------------------------------------------------
+
+Waiting time between eruptions and the duration of the eruption
+for the Old Faithful geyser in Yellowstone National Park,
+Wyoming, USA.
+
 ```{r}
-#| context: server
+selectInput(
+  "n_breaks", label = "Number of bins:",
+  choices = c(10, 20, 35, 50), selected = 20
+)
 
-output$distPlot <- renderPlot({
+sliderInput(
+  "bw_adjust", label = "Bandwidth adjustment:",
+  min = 0.2, max = 2, value = 1, step = 0.2
+)
+```
 
-x <- faithful[, 2] # Old Faithful Geyser data
+Column
+--------------------------------------------------
 
-bins <- seq(min(x), max(x), length.out = input$bins + 1)
+### Geyser Eruption Duration
 
-hist(x, breaks = bins, col = 'darkgray', border = 'white')
-
+```{r}
+renderPlot({
+  erpt = faithful$eruptions
+  hist(
+    erpt, probability = TRUE, breaks = as.integer(input$n_breaks),
+    xlab = "Duration (minutes)", main = "Geyser Eruption Duration",
+    col = 'gray', border = 'white'
+  )
+  
+  dens = density(erpt, adjust = input$bw_adjust)
+  lines(dens, col = "blue", lwd = 2)
 })
-
 ```
